--- a/Modulo 4/ex01/index.html
+++ b/Modulo 4/ex01/index.html
@@ -39,7 +39,13 @@
                 <li><a href="../../Modulo 3/ex01 - github/aula.html"  target="osvaldo">Segundo</a></li>
             </ol>
             <p>
-                <iframe id="nengue" name="osvaldo" src="" frameborder="1"></iframe>
+                <iframe id="nengue" name="osvaldo" srcdoc="<h1>Selecione uma das opções! </h1> <p>Você cometeu um grande pecado hoje, seu pecador miseravel.</p>" frameborder="1"></iframe>
+            </p>
+            <h1>Iframe Estatico
+
+            </h1>
+            <p>
+                Quando você entra na sua pagina o seu iframe esta normalmente em branco, o ideal seria ele aparecer algo entende? pra isso você pode colocar a primeira opção de pagina no src, você também pode colocar um srcdoc, la você fazer um HTML inteiro dentro do iframe. esse mesmo src ou srcdoc só vai aparecer uma unica vez.
             </p>
         </article>
     </main>
