--- a/Modulo 4/ex01/index.html
+++ b/Modulo 4/ex01/index.html
@@ -47,6 +47,12 @@
             <p>
                 Quando você entra na sua pagina o seu iframe esta normalmente em branco, o ideal seria ele aparecer algo entende? pra isso você pode colocar a primeira opção de pagina no src, você também pode colocar um srcdoc, la você fazer um HTML inteiro dentro do iframe. esse mesmo src ou srcdoc só vai aparecer uma unica vez.
             </p>
+            <h1>
+                Incoscistencias dos Iframes
+            </h1>
+            <p>
+                Os iframes tem algumas incoveniencias, pois algumas vezes o GOOGLEBOT que é o bot que analiza os sites que vão estar no topo tem problemas para indentificar iframes e ele acaba não recomendando o seu site, ou seja, conteudos importantes não são recomendados serem colocados em iframes por conta disso. Pessoas cegas conseguem usar o computador graças a um software de leitor de tela, o problema é que esses software podem não identificar o seu iframe e assim alguém cego não pode ter 100% de aproveitamento do seu site.
+            </p>
         </article>
     </main>
 </body>
