--- a/Modulo 4/ex01/index.html
+++ b/Modulo 4/ex01/index.html
@@ -35,7 +35,7 @@
                 É importante que o diretório do arquivo do iframe local esteja certo, pois se não irá aparecer uma mensagem de erro alegando que o arquivo foi movido. Mudança de iframe com link, para isso você coloca o link doque o usario quer ver, porém no iframe você vai colocar um nome no iframe esse nome estara no seu target="NOMEDOIFRAME", com isso ao clicar no link você vai mudar oque esta sendo exibido no iframe.
             </p>
             <ol>
-                <li><a href="../../Modulo 3/ex02 - imagem de fundo/index.html" target="osvaldo">Primeiro</a></li>
+                <li><a href="../../Modulo 3/des02/index.html" target="osvaldo">Primeiro</a></li>
                 <li><a href="../../Modulo 3/ex01 - github/aula.html"  target="osvaldo">Segundo</a></li>
             </ol>
             <p>
@@ -57,9 +57,14 @@
                 Tornando Iframes mais Seguros
             </h1>
             <p>
-                é comum que ataques hackers capturem cadastros de usarios um jeito de proteger mais isso é colocar o login em um site SEPARADO e colocar um iframe no site principal linkando o site de login/cadastro, você também deve colocar uma especificação no iframe chamada SANDBOX="SANDBOX" com isso você cria uma proteção maior pois ele não está mais capturando dados do usario. Outra coisa que você colocar no iframe é o referrerpolicy="no-referrer", isso deixa o iframe mais limitado. Mas vamos imaginar que no seu site você quer que o usario preenchja o formulario, para isso vá no sandbox="allow-same-origin" <q>ue permite coisas da mesma origem, você pode dar um espaço e também colocar dentro do sandbox "allow-forms" e "allow-scripts" assim você vai ter mais possibilidades no iframe e mantendo o mesmo nivel de segurança. Futuramente teremos JavaScripts, para bloquear um script no iframe é só você colocar novamente sandbox="sandbox", se você quiser habilitar SOMENTE scripts coloque "allow-scripts".</q>
+                é comum que ataques hackers capturem cadastros de usarios um jeito de proteger mais isso é colocar o login em um site SEPARADO e colocar um iframe no site principal linkando o site de login/cadastro, você também deve colocar uma especificação no iframe chamada SANDBOX="SANDBOX" com isso você cria uma proteção maior pois ele não está mais capturando dados do usario. Outra coisa que você colocar no iframe é o referrerpolicy="no-referrer", isso deixa o iframe mais limitado. Mas vamos imaginar que no seu site você quer que o usario preenchja o formulario, para isso vá no sandbox="allow-same-origin" que permite coisas da mesma origem, você pode dar um espaço e também colocar dentro do sandbox "allow-forms" e "allow-scripts" assim você vai ter mais possibilidades no iframe e mantendo o mesmo nivel de segurança. Futuramente teremos JavaScripts, para bloquear um script no iframe é só você colocar novamente sandbox="sandbox", se você quiser habilitar SOMENTE scripts coloque "allow-scripts".
             </p>
+
         </article>
+
     </main>
+    <footer>
+        <h1>Feito por João</h1>
+    </footer>
 </body>
 </html>
