--- a/moduloSecundario/ex02 flex/index.html
+++ b/moduloSecundario/ex02 flex/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid</title>
+    <title>Flex</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,9 +15,6 @@
         <div class="jooj">
             <div class="oi">
                 BOLAS
-            </div>
-            <div class="oi">
-                CSS
             </div>
         </div>
     </div>
