--- a/moduloSecundario/ex03/index.html
+++ b/moduloSecundario/ex03/index.html
@@ -22,12 +22,18 @@
                 ABOUT ME
             </h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi, minima obcaecati impedit amet laboriosam temporibus cum modi dolorum possimus magni iusto nobis inventore eum mollitia? Hic obcaecati totam voluptate temporibus.</p>
+            <h1>WHAT I DO?</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad in molestiae veniam impedit enim quis nemo nobis ratione? Provident quo hic accusantium fugit quaerat impedit libero aperiam optio, tempore minima? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, repudiandae. Aut, non pariatur animi tempora deleniti repudiandae reiciendis tempore nesciunt perspiciatis iste corrupti quos minus maxime provident nostrum modi rerum!</p>
+            <h1>LOCATION</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure perferendis itaque architecto corrupti, incidunt corporis quae alias quis reprehenderit est impedit sint, laboriosam repellat voluptas harum ducimus delectus esse recusandae!</p>
         </div>
+
 
         <div class="dois">
             <h1>ETC</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad facilis distinctio vero rem aspernatur eum magnam? Veniam ea et ut. Iure aliquam sequi laboriosam. Praesentium eum officia ea harum. Sint!</p>
-            
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad facilis distinctio vero rem aspernatur eum magnam? Veniam ea et ut. Iure aliquam sequi laboriosam. Praesentium eum officia ea harum. Sint! Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, hic, quam sint qui aut aspernatur ut, quis provident maxime excepturi consectetur cupiditate ipsa eligendi est maiores enim sequi eum odit.m Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis eaque vitae ea laudantium, cupiditate ab placeat amet suscipit blanditiis magnam harum aliquid esse itaque omnis veritatis deserunt eveniet in quasi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi, fugiat! Quaerat quae cupiditate nesciunt officiis obcaecati ut non, velit eius quo saepe eveniet atque quasi harum ad aliquam! Harum, cum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, eos totam? Autem deserunt magni ut ratione maiores exercitationem eius, minima molestias, expedita nihil vero! Beatae quam et repudiandae quidem velit.</p>
+            <h1>ETC 2</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis sit sunt fuga quod dolores dignissimos reiciendis repellendus et ad molestiae, saepe fugit animi ea minima dolorum maxime beatae nemo ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ad tempora vel, unde, id fugit iusto laboriosam eaque rem quos voluptatem, neque pariatur odio? Repudiandae ullam deleniti maxime cumque delectus!m Lorem ipsum dolor sit amet consectetur adipisicing elit. Error nemo dolorum cum voluptas debitis. Ipsa nisi corrupti voluptate obcaecati. Provident nemo a sint! Ex ad culpa totam? Officiis, explicabo inventore.</p>
         </div>
     </main>
 </body>
