--- a/moduloSecundario/des01/index.html
+++ b/moduloSecundario/des01/index.html
@@ -26,7 +26,7 @@
             </h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, nobis sapiente, temporibus eos officiis facere exercitationem, ducimus nulla quidem recusandae mollitia esse laborum veritatis beatae autem! Accusantium vitae ratione corporis!</p>
             <img src="uranio foda.jpg" alt="" width="250px">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam quos eos, sapiente corrupti, praesentium quae non excepturi doloremque eum nostrum corporis minima tenetur voluptates ratione, dicta deserunt eius quibusdam vero!</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam quos eos, sapiente corrupti, praesentium quae non excepturi doloremque eum nostrum corporis minima tenetur voluptates ratione, dicta deserunt eius quibusdam vero! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet est omnis expedita ullam quo unde quas aut sequi architecto adipisci. Necessitatibus, dolorem similique. Nam debitis qui cupiditate aliquam delectus ea. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum sint vitae consequuntur possimus. Odio et repellendus itaque. Quo quam ipsa enim fuga consectetur saepe odio molestias, vitae consequuntur unde necessitatibus!</p>
         </section>
 
         <section class="uranio">
@@ -36,5 +36,23 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae nemo maxime, repellendus quibusdam nulla officia reiciendis, nam delectus voluptas itaque perferendis minus nesciunt laudantium. Nesciunt, suscipit. Nisi accusantium fugiat culpa.</p>
         </section>
     </main>
+    <div>
+        <section class="uranio137" id="carbon">
+            <h1>
+                CARBONO
+                
+            </h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, nobis sapiente, temporibus eos officiis facere exercitationem, ducimus nulla quidem recusandae mollitia esse laborum veritatis beatae autem! Accusantium vitae ratione corporis!</p>
+            <img src="uranio foda.jpg" alt="" width="250px">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam quos eos, sapiente corrupti, praesentium quae non excepturi doloremque eum nostrum corporis minima tenetur voluptates ratione, dicta deserunt eius quibusdam vero! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate tempora nobis nisi saepe laudantium, quia vitae quod voluptates pariatur ipsa quis, dolores tenetur natus fugiat quae totam ducimus. Voluptas, quo! Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse exercitationem, aperiam, earum architecto itaque ipsum sequi saepe eius rerum accusantium nulla! Quam necessitatibus cum, adipisci suscipit at labore earum est.</p>
+        </section>
+
+        <section class="uranio" id="oxygen">
+            <h1>OXIGÊNIO</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur asperiores optio molestiae. Iusto libero voluptatibus consequuntur quibusdam sapiente accusamus nisi quis esse nesciunt. Praesentium ipsam reprehenderit repudiandae, veritatis delectus hic. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste dolore, rerum dolores quod repellendus repellat eum quia. Ex, nesciunt facere nostrum adipisci facilis labore quos eaque nemo quibusdam quod sunt!</p>
+            <img src="imagem fodastica.jpeg" alt="#">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae nemo maxime, repellendus quibusdam nulla officia reiciendis, nam delectus voluptas itaque perferendis minus nesciunt laudantium. Nesciunt, suscipit. Nisi accusantium fugiat culpa.</p>
+        </section>
+    </div>
 </body>
 </html>
