--- a/AULAS IMPORTANTES/CENTRALIZAÇÃO DE DIV/index.html
+++ b/AULAS IMPORTANTES/CENTRALIZAÇÃO DE DIV/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Aula de reforço</h1>
-        <p>CENTRALIZAÇÃO DE DIVS</p>
+        <p>TUDO</p>
     </header>
     <main>
         <article>
@@ -19,8 +19,11 @@
         <p>
             Para centralizar uma div você deve colocar ela como posição ABSOLUTA e depois colocar o TOP e LEFT depois disso coloque um "<code>TRANSFORM: TRANSLATE(-50%, -50%)</code>"
         </p>
+        <h1>Como usar FLEX?</h1>
+        <p>Primeiramente algo que eu recomendo é a utilização do flexbox adventure e w3sschools. Primeiramente você vai usar o "display:flex" para fazer com que oque você quer mostre tudo em FLEX, fique ciente que você vai estar configurando as coisas que estão DENTRO doque você colocou como FLEX, logo depois disso você pode usar os comandos "ALIGN-ITEMS", "JUSTIFY-CONTENT" e "ALIGN-SELF" para posicionar o seu conteudo, sendo o align items utilizado para modificar coisas na VERTICAL e o justify content na HORIZONTAL, o align self é utilizado quando você quer posicionar algo SEPARADAMENTE fique ciente que algin self só serve para comando vertical (até onde eu sei). <br>Flex direction, flex direction é utilizado para dizer como seu conteudo vai ser mostrado, se vai ser em COLUMN ou em ROW, ambos tens sua versão REVERSE que basicamente inverte o conteudo, para configurar o "margin" dessas coluna você utiliza ROW-GAP e CLOUMN-GAP. Temos também o próprio FLEX que no caso vai ser o quando o seu item vai ocupar da coluna, essa configuração normalmente é usada em PORCENTAGEM, um não tão importante é o ORDER que pode ser usado para definir em qual ordem o seu conteudo vai aparecer. veja este <a href="../../moduloSecundario/ex03/index.html">EXEMPLO</a> e <a href="../../moduloSecundario/ex02 flex/index.html">OUTRO</a> para mais informações.</p>
     </article>
         
     </main>
+    
 </body>
 </html>
