--- a/Modulo 4/ex02/index.html
+++ b/Modulo 4/ex02/index.html
@@ -39,6 +39,19 @@
             
         </section>
     </div>
+    <div class="flex" id="div">
+        <section class="content" id="cinco">
+            <h1>5. Envios</h1>
+            <p>
+                Existem duas formas de envio de formulario, GET e POST, sendo o padrão o GET, para mudar o metodo basta colocar a tag METHOD dentro do form. o metodo GET faz com que as coisas registradas na caixa de envio sejam mostradas no URL do seu site e o POST faz eles não aparecerem oque torna seu site mais seguro, porém eles ainda sim estão visiveis só não no URL, para isso você vai no inspecionar do seu site e depois vá em network e clique no arquivo que você registrou como enviar e depois em header e pronto la esta seus dados, para criptografar seus dados você teria que utilizar outras coisas. situações os quais você não pode usar o "GET", em formularios de mais de 3 mil linhas, formularios de senha, envios de foto/arquivos e etc. Porque usar o "POST", conteudos sensiveis como senhas para proteger mais você teria que estudar HTTPS.
+            </p>
+        </section>
 
+        <section class="content" id="seis">
+            <h1>6. </h1>
+            <p></p>
+            
+        </section>
+    </div>
 </body>
 </html>
