--- a/Modulo 4/expratico/index.html
+++ b/Modulo 4/expratico/index.html
@@ -26,7 +26,7 @@
 <body>
     <div class="Coisa">
         <h1>Formulario Fodastico</h1>
-        <form action="xx.js"></form>
+        <form action="xx.js" method="post" ></form>
             <div class="form">
                 <p><Label for="INome">Nome</Label>
                     <input type="Name" name="Nome" id="INome"></p>
