--- a/Modulo 4/ex02/index.html
+++ b/Modulo 4/ex02/index.html
@@ -48,10 +48,13 @@
         </section>
 
         <section class="content" id="seis">
-            <h1>6. </h1>
-            <p></p>
+            <h1>6. Outros Inputs</h1>
+            <p>
+                Existem outros Inputs que você deve utilizar para criar um formulario sendo eles, senha, reset e entre outros que você ainda vai aprender. assim como existem outros inputs também existem outros valores que são eles o "required" que faz com que você seja obrigado a preencher determinado input ou campo, e os maxlenght e minlenght que são aqueles que determinam o maximo e o minimo de letras.Size serve para colocar o tamanho da caixa de input sendo o numero que você colocar o numero de letras. o placeholder é algo que segura o lugar até o usario clicar. autocomplete no on ou no off serve para ligar o preenchimento automatico isso no form pois se você colocar o autocomplete no input você vai dizer para que aquele determinado input serve e o que o auto preenchimento do google deve preencher. Voltando para os Inputs, o input NUMBER dentro deste input você só pode colocar numeros, com isso também descobrimos valores que são eles o max e o min, o max determina o numero maximo que você pode colocar ali e o min é auto explicativo, entretanto se caso você queira colocar 0.5 você tem que colocar um valor chamado STEP que basicamente é em quanto em quanto que os numeros irão contar, é recomendado que você coloque 0.1. Temos o input Month que nada mais que preenche o campo pela data, é imporante dizer que o value dentro desse input caso você queira colocar um mês deve ser colocado ANO-MÊS (2024-06), do mesmo jeito que existe o de mês existe o de dia que no caso é o DATE sendo o valor ANO-MÊS-DIA, também temos em horas que seria o input TIME.
+            </p>
             
         </section>
     </div>
+
 </body>
 </html>
