--- a/Modulo 4/ex02/index.html
+++ b/Modulo 4/ex02/index.html
@@ -54,6 +54,13 @@
             </p>
             
         </section>
+
+        <section class="content" id="sete">
+            <h1>7. Compatibilidades</h1>
+            <p>
+                Existem diversos navegadores e alguns podem fazer com que seu formulario seja mostrado de formas diferentes, isso acontece por conta de compatibilidade, pois alguns navegadores tem diferentes jeitos de mostrar diferentes, por exemplo, o firefox pode mostrar um formulario diferente do seu, isso também vale pros celulares. 
+            </p>
+        </section>
     </div>
 
 </body>
