--- a/Modulo 4/ex02/index.html
+++ b/Modulo 4/ex02/index.html
@@ -54,14 +54,25 @@
             </p>
             
         </section>
+    </div>
 
+    <div class="flex" id="div">
         <section class="content" id="sete">
             <h1>7. Compatibilidades</h1>
             <p>
                 Existem diversos navegadores e alguns podem fazer com que seu formulario seja mostrado de formas diferentes, isso acontece por conta de compatibilidade, pois alguns navegadores tem diferentes jeitos de mostrar diferentes, por exemplo, o firefox pode mostrar um formulario diferente do seu, isso também vale pros celulares. 
             </p>
         </section>
-    </div>
 
+        <section class="content" id="oito">
+            <h1>
+                8. Telefones e Emails
+            </h1>
+            <p>
+                Para fazer um Input de email você usa o tipo "email", para telefone você usa "tel", porém no telefone para que o usario preencha realmente um telefone você um pattern que é uma condição do formato que o usario teria que responder o formulario, sendo o de telefone um pattern com "^d\[0-9]{4,5}-d\[0-9]{4,5}$". explicação, o ^ é o inicio e o $ é o final, o 0-9 serve para dizer que ele tera digitos de 0-9 o 4,5 serve para dizer quantos digitos é preciso antes do traço e depois repita a mesma coisa. o d\ serve para representar um digito. para se aprofundar mais tente aprender RegEx. você pode usar também um fieldsite que significa grupo de campos, isso vai fazer todos os dados receberem uma borda, dentro dele você pode colocar uma LEGEND que é uma legenda para dizer sobre o que é determinado campo.
+            </p>
+        </section>
+   
+    </div>
 </body>
 </html>
