--- a/Modulo 4/ex02/index.html
+++ b/Modulo 4/ex02/index.html
@@ -74,5 +74,25 @@
         </section>
    
     </div>
+
+    <div class="flex" id="div">
+        <section class="content" id="nove">
+            <h1> 
+                9. CheckBox e RadioButton
+            </h1>
+            <p>
+                o checkbox serve pra fazer tipo uma checklist, pra dizer coisas que você gosta outra marcar oque você fez ou não fez. os radio são basicamente as checklists só que em forma de circulos, para se criar um radio de Sexo por exemplo (só se aplica ao radio), você usa o mesmo nome nos dois inputs assim você só pode selecionar um deles. pra fazer um checkbox e um radio ja marcado é só colocar CHECKED no input
+            </p>
+        </section>
+        <section class="content" id="dez">
+            <h1>
+                XXXXXXXXX
+            </h1>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, non quia? Inventore vel est repellat magnam odio iusto, sunt iste veritatis fugit fugiat temporibus possimus quidem minima a quod error? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae, repellendus ratione ad non nemo labore fuga distinctio sequi voluptatum corporis soluta alias, assumenda magni. Blanditiis libero non suscipit deserunt dolorem.
+            </p>
+        </section>
+
+    </div>
 </body>
 </html>
