--- a/Modulo 4/ex02/index.html
+++ b/Modulo 4/ex02/index.html
@@ -86,10 +86,10 @@
         </section>
         <section class="content" id="dez">
             <h1>
-                XXXXXXXXX
+                10. Controles adicionais
             </h1>
             <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, non quia? Inventore vel est repellat magnam odio iusto, sunt iste veritatis fugit fugiat temporibus possimus quidem minima a quod error? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae, repellendus ratione ad non nemo labore fuga distinctio sequi voluptatum corporis soluta alias, assumenda magni. Blanditiis libero non suscipit deserunt dolorem.
+                Esse será o ultimo video relacionado as tags INPUTS, temos um input de COR, para selecionar cores isso é util para selecionar alguma cor especifica, para deixar uma cor ja selecionada basta você colocar o value e o código daquela cor. temos o input range que é usado para escolher o nivel, sendo normalmente usado para nivel de satisfação, esse nivel vai de 0-100, para configurar o maximo e o minimo basta colocar MAX/MIN, para colocar algo ja selecionado basta colocar value e o numero que você quer que seja o padrão. temos o tipo file que você envia um arquivo, serve para anexar arquivos, é importante saber que para usar esse type é recomendado o uso do method "post"
             </p>
         </section>
 
