--- a/Modulo 4/expratico/index2.html
+++ b/Modulo 4/expratico/index2.html
@@ -45,8 +45,8 @@
                     <label for="isex">Masculino</label>
                 </div>
                 <div>
-                    <input type="Radio" name="sex" id="isex">
-                    <label for="isex">Feminino</label>
+                    <input type="Radio" name="sex" id="fsex">
+                    <label for="fsex">Feminino</label>
                 </div>
             </fieldset>
             <fieldset>
@@ -57,16 +57,16 @@
                     
                 </div>
                 <div class="thing">
-                     <input type="checkbox" id="checkbox" name="check">
-                    <label for="checkbox">Boxes</label>
+                     <input type="checkbox" id="dcheckbox" name="check">
+                    <label for="dcheckbox">Boxes</label>
                 </div>
                 <div class="thing">
-                    <input type="checkbox" id="checkbox" name="check">
-                   <label for="checkbox">Boxes</label>
+                    <input type="checkbox" id="echeckbox" name="check">
+                   <label for="echeckbox">Boxes</label>
                </div>
                <div class="thing">
-                <input type="checkbox" id="checkbox" name="check">
-               <label for="checkbox">Boxes</label>
+                <input type="checkbox" id="fcheckbox" name="check">
+               <label for="fcheckbox">Boxes</label>
            </div>
 
             </fieldset>
